Update code in 'Which debts are worth banks effort.ipynb'

--- a/Which debts are worth banks effort.ipynb
+++ b/Which debts are worth banks effort.ipynb
@@ -124,7 +124,7 @@
    ],
    "source": [
     "# Read in dataset\n",
-    "bank = pd.read_csv(\"C:/Users/aryan/Downloads/bank_data.csv\")\n",
+    "bank = pd.read_csv(\"bank_data.csv\")\n",
     "\n",
     "# Print the first few rows of the DataFrame\n",
     "bank.head()"
@@ -411,8 +411,8 @@
       "Dep. Variable:     actual_recovery_amount   R-squared:                       0.817\n",
       "Model:                                OLS   Adj. R-squared:                  0.817\n",
       "Method:                     Least Squares   F-statistic:                     8378.\n",
-      "Date:                    Sun, 21 Jan 2024   Prob (F-statistic):               0.00\n",
-      "Time:                            01:13:21   Log-Likelihood:                -16936.\n",
+      "Date:                    Mon, 22 Jan 2024   Prob (F-statistic):               0.00\n",
+      "Time:                            01:38:26   Log-Likelihood:                -16936.\n",
       "No. Observations:                    1882   AIC:                         3.388e+04\n",
       "Df Residuals:                        1880   BIC:                         3.389e+04\n",
       "Df Model:                               1                                         \n",
@@ -467,8 +467,8 @@
       "Dep. Variable:     actual_recovery_amount   R-squared:                       0.261\n",
       "Model:                                OLS   Adj. R-squared:                  0.256\n",
       "Method:                     Least Squares   F-statistic:                     63.78\n",
-      "Date:                    Sun, 21 Jan 2024   Prob (F-statistic):           1.56e-13\n",
-      "Time:                            01:13:21   Log-Likelihood:                -1278.9\n",
+      "Date:                    Mon, 22 Jan 2024   Prob (F-statistic):           1.56e-13\n",
+      "Time:                            01:38:26   Log-Likelihood:                -1278.9\n",
       "No. Observations:                     183   AIC:                             2562.\n",
       "Df Residuals:                         181   BIC:                             2568.\n",
       "Df Model:                               1                                         \n",
@@ -527,8 +527,8 @@
       "Dep. Variable:     actual_recovery_amount   R-squared:                       0.304\n",
       "Model:                                OLS   Adj. R-squared:                  0.296\n",
       "Method:                     Least Squares   F-statistic:                     39.27\n",
-      "Date:                    Sun, 21 Jan 2024   Prob (F-statistic):           7.04e-15\n",
-      "Time:                            01:13:21   Log-Likelihood:                -1273.4\n",
+      "Date:                    Mon, 22 Jan 2024   Prob (F-statistic):           7.04e-15\n",
+      "Time:                            01:38:26   Log-Likelihood:                -1273.4\n",
       "No. Observations:                     183   AIC:                             2553.\n",
       "Df Residuals:                         180   BIC:                             2562.\n",
       "Df Model:                               2                                         \n",
@@ -594,8 +594,8 @@
       "Dep. Variable:     actual_recovery_amount   R-squared:                       0.304\n",
       "Model:                                OLS   Adj. R-squared:                  0.296\n",
       "Method:                     Least Squares   F-statistic:                     39.27\n",
-      "Date:                    Sun, 21 Jan 2024   Prob (F-statistic):           7.04e-15\n",
-      "Time:                            01:13:21   Log-Likelihood:                -1273.4\n",
+      "Date:                    Mon, 22 Jan 2024   Prob (F-statistic):           7.04e-15\n",
+      "Time:                            01:38:26   Log-Likelihood:                -1273.4\n",
       "No. Observations:                     183   AIC:                             2553.\n",
       "Df Residuals:                         180   BIC:                             2562.\n",
       "Df Model:                               2                                         \n",
